# simplebot_description

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch.py  rviz.launch.py  state_publisher.launch.py
models/urdf/: materials.xacro  simplebot.gazebo  simplebot.xacro
rviz/: fake_kit_navigation.rviz  sensors.rviz
worlds/: custom_world.world
