<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simplebot_description</name>
  <version>0.0.1</version>
  <description>simplebot_description ins based on https://github.com/issaiass/Simplebot.git and is the description for the URDF for ROS2 examples</description>
  <maintainer email="issaiass@hotmail.com">kartik</maintainer>
  <maintainer email="issaiass@hotmail.com">kartik</maintainer>
  <license>Creative Commons 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
